--- a/app/src/main/res/layout/fragment_user_info_screen.xml
+++ b/app/src/main/res/layout/fragment_user_info_screen.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presetation.ui.userinfoscreen.UserInfoScreenFragment">
+    tools:context=".presentation.ui.userinfoscreen.UserInfoScreenFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
