--- a/app/src/main/res/layout/fragment_users_screen.xml
+++ b/app/src/main/res/layout/fragment_users_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,10 +18,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvUsers"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:paddingVertical="8dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnGetUsers" />
 
     <TextView
         android:id="@+id/tvNoData"
@@ -29,7 +33,21 @@
         android:layout_height="wrap_content"
         android:paddingVertical="8dp"
         android:text="No data"
-        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/rvUsers"
+        app:layout_constraintEnd_toEndOf="@id/rvUsers"
+        app:layout_constraintStart_toStartOf="@id/rvUsers"
+        app:layout_constraintTop_toTopOf="@id/rvUsers"
         tools:visibility="visible" />
 
-</LinearLayout>
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/rvUsers"
+        app:layout_constraintEnd_toEndOf="@id/rvUsers"
+        app:layout_constraintStart_toStartOf="@id/rvUsers"
+        app:layout_constraintTop_toTopOf="@id/rvUsers"
+        android:id="@+id/progressBar"
+        android:visibility="invisible"
+        />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
