--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/action_changeTheme"
-        android:visible="true"
         android:title="Theme"
         app:showAsAction="never" />
     <item
         android:id="@+id/historyScreenFragment"
-        android:visible="true"
         android:title="History"
         app:showAsAction="never" />
 </menu>
